--- a/MouseRace.html
+++ b/MouseRace.html
@@ -111,7 +111,7 @@ sjs.stoppedBy(x,y);
 setInterval(function(){
 var x = Math.floor(Math.random() * 783);
 var y = Math.floor(Math.random() * 470);
-var powerUp = new sjs.Image("Images/cheese.gif");
+var powerUp = new sjs.Image("Images/Cheese.gif");
 powerUp.type = "powerUp";
 powerUp.setGravity();
 powerUp.setSize(50,50);
