--- a/MouseRace.html
+++ b/MouseRace.html
@@ -88,7 +88,7 @@ sjs.keyDown(UP_KEY, function(){
 if(canJump == true){
 canJump = false;
 player.pushUp(55);
-player.setImage("Images/Mousejump.png");
+player.setImage("Images/MouseJump.png");
 r_track = 4;
 }
 }); //end keyDown function
