--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ sjs.open();
 var menu_text = new sjs.Text("MENU",28,"blue");
 menu_text.centerH();
 
-var game_text = new sjs.Text("Use the Arrow Keys to Control the Player. Avoid larger enemies, Collect the cheese and devour enemies smaller than you!",28,"#ff0");
+var game_text = new sjs.Text("Use the Arrow Keys to Control the Player. Avoid larger enemies, Collect the cheese and devour enemies smaller than you!  Use the Space bar to start the game",28,"#ff0");
 game_text.centerH().offset(0, 30);
 
 var startBtn = new sjs.Button("Start", function(){
